consumerservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: wyteng/task2consumer
---
apiVersion: v1
kind: Service
metadata:
  name: consumer
spec:
  type: NodePort
  selector:
    app: consumer
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 32500
