tasksservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks
spec:
  selector:
    matchLabels:
      app: tasks
  
  template:
    metadata:
      labels:
        app: tasks
    
    spec:
      containers:
      - name: tasks
        image: wyteng/task1
---

apiVersion: v1
kind: Service
metadata:
  name: tasksservice
spec:
  type: NodePort
  selector:
    app: tasks
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 32500
